# okama-dash

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE.md  README.md  app.py  clear_redis_cache.py  footer.py  inflation.py  local_okama  navigation.py  pyproject.toml  requirements.txt  run_gunicorn.py  settings.py  symbols.py
.claude/skills/annual_bar_charts/: SKILL.md
.claude/skills/check_prod_errors/: SKILL.md
.claude/skills/cleanup_worktree/: SKILL.md
.claude/skills/split_large_layout/: SKILL.md
.claude/skills/test_server_load/: SKILL.md
.github/workflows/: deploy.yml
.skills/deploy-okama-dash/: SKILL.md
.skills/run-okama-dash/: SKILL.md
application/: settings.py  symbols.py
application/cards/: asset_list_controls.py  statistics_table.py  wealth_indexes_chart.py
application/cards_compare/: asset_list_controls.py  statistics_table.py  wealth_indexes_chart.py
application/cards_efficient_frontier/: ef_chart.py  ef_controls.py
assets/: chart_yrescale.js  charts.css  dashAgGridFunctions.js  forms.css  grids.css  portfolio-card.css  select_tab_complete.js  tooltips.css  yandex.js
cache-directory/: .gitignore
cards/: asset_list_controls.py  assets_names.py  wealth_indexes_chart.py
common/: __init__.py  assets_names_dash_table.py  chart_helpers.py  create_link.py  date_input.py  ef_grid.py  inflation.py  info_dash_table.py  mantine.py  math.py  mobile_screens.py  object_cache.py  parse_query.py  seo.py  seo_content.py  settings.py  stale_callbacks.py  symbols.py  update_style.py  url_portfolio.py  validators.py  xlsx.py
common/auth/: __init__.py  db.py  guard.py  helpers.py  login_manager.py  models.py  service.py
common/cards_compare/: asset_list_controls.py
common/cards_efficient_frontier/: ef_controls.py
common/html_elements/: copy_link_div.py  grid_export.py  info_ag_grid.py  info_dash_table.py  save_config_div.py  submit_spinner.py
deploy/: README.md  deploy.sh
pages/: analytics.py  compare.py  frontier.py  home.py
pages/benchmark/: benchmark.py
pages/benchmark/cards_benchmark/: benchmark_chart.py  benchmark_controls.py  benchmark_description.py  benchmark_info.py
pages/benchmark/cards_benchmark/eng/: benchmark_description_txt.py  benchmark_tooltips_options_txt.py
pages/cabinet/: cabinet.py
pages/cards_efficient_frontier/: ef_chart.py
pages/compare/: compare.py
pages/compare/cards_compare/: asset_list_controls.py  assets_info.py  compare_description.py  statistics_table.py  wealth_indexes_chart.py
pages/compare/cards_compare/eng/: al_tooltips_options_txt.py  compare_description_txt.py
pages/compare/crisis/: crisis_data.py
pages/database/: database.py
pages/database/cards_database/: db_description.py  db_namespaces.py  db_search_controls.py  db_search_results.py
pages/database/cards_database/eng/: db_description_txt.py
pages/efficient_frontier/: ef_cache.py  frontier.py  prepare_ef_plot.py
pages/efficient_frontier/cards_efficient_frontier/: ef_assets_names.py  ef_chart.py  ef_chart_transition_map.py  ef_controls.py  ef_description.py  ef_find_weights.py  ef_info.py  ef_portfolio_card.py
pages/efficient_frontier/cards_efficient_frontier/ef_controls/: __init__.py  constants.py  gating.py  layout.py  links.py  options.py  symbols.py
pages/efficient_frontier/cards_efficient_frontier/eng/: ef_description_txt.py  ef_tooltips_options_txt.py
pages/login/: login.py
pages/macro/: cape10.py  inflation.py  macro_data.py  macro_link.py  macro_objects.py  rates.py  real_estate.py
pages/macro/cards_macro/: macro_chart.py  macro_controls.py  macro_description.py  macro_download.py  macro_stats.py
pages/macro/cards_macro/eng/: cape10_description_txt.py  inflation_description_txt.py  (+2 more)
pages/portfolio/: portfolio.py
pages/portfolio/cards_portfolio/: cashflow_controls.py  pf_statistics_table.py  pf_wealth_indexes_chart.py  portfolio_controls.py  portfolio_description.py  portfolio_info.py  rebalancing_controls.py
pages/register/: register.py
tests/: conftest.py
tests/component/: conftest.py  test_auth_guard.py  test_benchmark_data_callback.py  test_benchmark_url_portfolio.py  test_cabinet_callbacks.py  test_compare_benchmark_callbacks.py  test_compare_data_callback.py  test_compare_url_portfolio.py  test_database_callbacks.py  test_date_default_current_month.py  test_distribution_stats.py  test_dump_callbacks_script.py  test_ef_callbacks.py  test_ef_click_find.py  test_ef_data_callback.py  test_ef_grid_callbacks.py  test_ef_info_inflation.py  test_ef_url_portfolio.py  test_find_withdrawal_callbacks.py  test_grid_export.py  test_grid_sorting.py  test_info_panels_bad_tickers.py  test_link_callback_submit_input.py  test_login_callbacks.py  test_macro_cape10_page.py  test_macro_cards.py  test_macro_download.py  test_macro_inflation_figures.py  test_macro_inflation_page.py  test_macro_rates_page.py  test_macro_real_estate_figures.py  test_macro_real_estate_page.py  test_mc_params_callbacks.py  test_navbar_auth.py  test_portfolio_callbacks.py  test_portfolio_data_callback.py  test_portfolio_gating.py  test_portfolio_go_to_ef.py  test_portfolio_go_to_links.py  test_register_callbacks.py  (+5 more)
tests/e2e/: conftest.py  test_cabinet_flow.py  test_macro_pages.py  test_portfolio_page.py  test_shareable_links.py  test_submit_interaction.py  test_ticker_search_tab.py
tests/fixtures/: symbols_data.json
tests/mocks/: okama_mock.py
tests/unit/: conftest.py  test_auth_helpers.py  test_auth_models.py  test_auth_service_configs.py  test_auth_service_users.py  test_chart_helpers.py  test_create_link.py  test_dump_callbacks.py  test_ef_grid.py  test_ef_label_padding.py  test_ef_portfolio_card.py  test_find_withdrawal_helpers.py  test_inflation.py  test_macro_data.py  test_macro_link.py  test_macro_mocks.py  test_macro_objects.py  test_macro_stats.py  test_math.py  test_mc_distribution_parameters.py  test_object_cache.py  test_parse_query.py  test_seo_content.py  test_symbols.py  test_symbols_cache_isolation.py  test_url_portfolio.py  test_validators.py
tmp/: .gitignore
tools/: bench_server.py  dump_callbacks.py
(+19 files in other folders)
