[tool.poetry]
name = "okama-dash"
version = "3.0.0"
description = "Python financial widgets with okama and Dash (plotly)"
authors = ["Sergey Kikevich <sergey@rostsber.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://okama.io/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "okama_dash"}]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11, <4.0.0"
okama = {git = "git@github.com:mbk-dev/okama.git", branch = "dev"}
dash = "*"
dash-daq = "*"
dash-bootstrap-components = "*"
dash-mantine-components = "*"
plotly = "5.24.1"  # bug with clickData["points"][0]["customdata"]
#plotly = "*"
Flask-Caching = "*"
pandas = "^3.0.0"
#scipy = "1.12"  # https://github.com/numpy/numpy/issues/27135
redis = "*"
xlsxwriter = "*"
dash-ag-grid = "^35.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = { version = "*", optional = true }
gunicorn = "*"
ruff = "^0.15.14"
pytest-playwright = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: pure logic tests, no Dash or browser",
    "component: Dash callback tests with mocked okama",
    "e2e: Playwright browser tests",
]