[tool.poetry]
name = "okama-dash"
version = "4.5.0"
description = "Python financial widgets with okama and Dash (plotly)"
authors = ["Sergey Kikevich <sergey@rostsber.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://okama.io/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "okama_dash"}]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11, <4.0.0"
okama = "^2.2.2"
dash = "*"
dash-daq = "*"
dash-bootstrap-components = "*"
dash-mantine-components = "*"
# plotly>=6 loses numpy customdata in clickData (plotly/plotly.py#5119);
# app passes plain lists instead — see prepare_ef_plot.py and
# test_customdata_serializes_as_json_lists_for_clickdata.
plotly = "*"
Flask-Caching = "*"
pandas = "^3.0.0"
# TEMPORARY: cap scipy below 1.18 — scipy 1.18.0 broke scipy.stats.kstest/ks_1samp
# ("ndtr() takes from 1 to 2 positional arguments but 3 were given"), which crashes
# the Portfolio "Distribution test" (common get_statistics_for_distribution).
# Prod runs 1.17.1 (unaffected). Remove this cap once scipy ships a fix (1.18.1+) or
# the distribution test moves to an okama built-in. See findings-to-fix #37.
scipy = ">=1.17,<1.18"
redis = "*"
xlsxwriter = "*"
dash-ag-grid = "^35.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
gunicorn = "*"
ruff = "^0.15.14"
pytest-playwright = "^0.8.0"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: pure logic tests, no Dash or browser",
    "component: Dash callback tests with mocked okama",
    "e2e: Playwright browser tests",
]