[tool.poetry]
name = "okama-dash"
version = "4.5.0"
description = "Python financial widgets with okama and Dash (plotly)"
authors = ["Sergey Kikevich <sergey@rostsber.ru>"]
license = "MIT"
readme = "README.md"
homepage = "https://okama.io/"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{include = "okama_dash"}]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12, <4.0.0"
okama = "^2.2.3"
dash = "*"
dash-daq = "*"
dash-bootstrap-components = "*"
dash-mantine-components = "*"
# plotly>=6 loses numpy customdata in clickData (plotly/plotly.py#5119);
# app passes plain lists instead — see prepare_ef_plot.py and
# test_customdata_serializes_as_json_lists_for_clickdata.
plotly = "*"
Flask-Caching = "*"
pandas = "^3.0.0"
# scipy is a direct dependency: _get_distribution_figure uses scipy.stats t/norm/lognorm
# .fit/.pdf for the fitted-PDF overlay curves (okama exposes no PDF-curve API). The scipy
# 1.18.0 kstest/ks_1samp (ndtr) regression no longer affects us — goodness-of-fit tests
# go through okama's Frame helpers (compute_distribution_stats). Verified green on 1.18.0,
# so the earlier temporary <1.18 cap is removed. See findings-to-fix #37.
scipy = "*"
redis = "*"
xlsxwriter = "*"
dash-ag-grid = "^35.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
gunicorn = "*"
ruff = "^0.15.14"
pytest-playwright = "^0.8.0"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["C", "E", "F", "W", "B"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: pure logic tests, no Dash or browser",
    "component: Dash callback tests with mocked okama",
    "e2e: Playwright browser tests",
]